Pre Final Commit