@@ -4,22 +4,24 @@ import com.horuz.test.helpwebapp.post.exception.PostNotFoundException;
 import com.horuz.test.helpwebapp.post.model.Post;
 import com.horuz.test.helpwebapp.post.model.Select;
 import com.horuz.test.helpwebapp.post.repository.SelectRepository;
-import com.horuz.test.helpwebapp.post.service.PostService;
 import com.horuz.test.helpwebapp.post.service.SelectService;
+import com.horuz.test.helpwebapp.post.utils.MessageUtil;
+import com.horuz.test.helpwebapp.security.api.model.CurrUser;
+import com.horuz.test.helpwebapp.security.api.service.IdentityApiService;
+import com.horuz.test.helpwebapp.security.exception.UserNotFoundException;
+import com.horuz.test.helpwebapp.security.model.Users;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class SelectServiceImpl implements SelectService {
     private final SelectRepository selectRepository;
-    private final PostService postService;
+    private final IdentityApiService identityApiService;
 
-    private static final String POST_NOT_FOUND = "Post %d not found";
     @Override
     public void makeSelect(Select select) {
         selectRepository.save(select);
@@ -30,17 +32,35 @@ public class SelectServiceImpl implements SelectService {
         List<Select> byUserId = selectRepository.findByUserId(user_id);
 
         return byUserId.stream()
-                .map(select -> postService.findById(select.getPostId()))
-                .collect(Collectors.toList());
+                .map(Select::getPost)
+                .toList();
     }
 
     @Override
-    public void deleteSelects(Integer select) {
-        Select byPostId = selectRepository
-                .findByPostId(select)
-                .orElseThrow(() -> new PostNotFoundException(
-                        String.format(POST_NOT_FOUND, select), HttpStatus.BAD_REQUEST
-                ));
-        selectRepository.delete(byPostId);
+    public void deleteSelects(Integer selects) {
+        CurrUser currUser = identityApiService.currentUserAccount().orElseThrow(
+                () -> new UserNotFoundException(MessageUtil.USER_NOT_FOUND_NOT_NAME, HttpStatus.BAD_REQUEST)
+        );
+        List<Select> byUserId = selectRepository.findByUserId(currUser.id());
+        System.out.println(byUserId);
+
+        boolean selectFound = false;
+        for (Select select : byUserId) {
+            Integer id = select.getPost().getId();
+            if (id.equals(selects)) {
+                selectRepository.delete(select);
+                selectFound = true;
+            }
+        }
+        if (!selectFound) {
+            Users users = identityApiService.currentUserAccountUsername(currUser.id()).orElseThrow();
+            throw new PostNotFoundException(
+                    String.format(
+                            MessageUtil.POST_NOT_FOUND_BY_USER_SELECT,
+                            selects,
+                            users.getUsername()),
+                    HttpStatus.BAD_REQUEST
+            );
+        }
     }
 }
